--- a/index.html
+++ b/index.html
@@ -650,8 +650,7 @@
         <div class="bb-results-center">
           <h2>Your Budget Picks</h2>
           <p class="bb-placeholder-text">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia
-            magnam sequi ullam.
+            Carefully selected picks that stay within your budget.
           </p>
           <!--  5 BB PICK CARD-->
           <div id="bbResultsGrid" class="bb-results-grid">
