Musicbrainz apis added

--- a/index.html
+++ b/index.html
@@ -371,27 +371,27 @@
             </div>
             <div class="about-box about-testimonials">
               <blockquote>
-                “This place breathes music. And that BB. Great!”
+                “Finally, it feels like an old-school record store again!”
                 <span>- M. Knopfler</span>
               </blockquote>
               <blockquote>
-                “Finally, a site that feels like a real record store.”
+                “I've been looking for a place like this for years. Where have you been hiding all this time?”
                 <span>- S.R. Vaughn</span>
               </blockquote>
               <blockquote>
-                “Found three hidden gems I didn't know I needed.”
+                “This Budget Button kicks ass 💪”
                 <span>- K. Ritchards</span>
               </blockquote>
               <blockquote>
-                “This place breathes music.”
+                “Found three hidden gems I didn't know I needed.”
                 <span>- E. Vedder</span>
               </blockquote>
               <blockquote>
-                “Smart features, real collector's spirit.”
+                “Smart features! I even saved some money along the way.”
                 <span>- P. McCartney</span>
               </blockquote>
               <blockquote>
-                “It's not just a store - it's a vibe.”
+                “Did someone say BB? 👏”
                 <span>- T. Waits</span>
               </blockquote>
             </div>
