Spotify link added

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                 alt="Tidal"
               />
             </a>
-            <a href="https://spotify.com" target="_blank">
+            <a href="https://open.spotify.com/playlist/7pX9c5flM0s0yeodG7dwaq?si=16aa675c99604657" target="_blank">
               <img
                 src="images/streaming-services-logo/spotify-logo-svg.svg"
                 alt="Spotify"
@@ -462,7 +462,7 @@
                 alt="Tidal"
               />
             </a>
-            <a href="https://spotify.com" target="_blank">
+            <a href="https://open.spotify.com/playlist/7pX9c5flM0s0yeodG7dwaq?si=16aa675c99604657" target="_blank">
               <img
                 src="images/streaming-services-logo/spotify-logo-svg.svg"
                 alt="Spotify"
