About Us text change

--- a/index.html
+++ b/index.html
@@ -339,20 +339,21 @@
           <div class="about-column">
             <div class="about-box about-text">
               <h3>Born From a Passion for Music</h3>
-              <p>
-                The Smoke Record Store was imagined as a personal space for
-                vinyl and CD lovers, built around the idea of exploring music
-                beyond algorithms.
-              </p>
-              <p>
-                It's a project shaped by years of music collecting and a growing
-                fascination with web technologies. Each feature reflects
-                something I'd want to use myself.
-              </p>
-              <p>
-                More than a portfolio - this is my honest attempt at creating a
-                digital record-digging experience.
-              </p>
+<p>
+  The Smoke Record Store was imagined as a personal space for
+  vinyl and CD lovers — a place to explore music in a more human, intuitive way.
+</p>
+<p>
+  This is all the result of following one idea, step by step.
+</p>
+<p>
+  It's shaped by years of record collecting and a growing curiosity for creating things on my own. 
+  Every feature is something I'd genuinely want to use myself.
+</p>
+<p>
+  More than a portfolio — this is my attempt to bring the feel of real record digging into a digital space.
+</p>
+
             </div>
             <div class="about-box about-image">
               <img
@@ -401,21 +402,21 @@
           <!-- Right column -->
           <div class="about-column">
             <div class="about-box about-text">
-              <h3>What's the <span class="bb-span-colored">Budget Button </span>?</h3>
-              <p>
-                <span class="bb-span-colored">BB</span> is a custom feature designed to help you discover
-                the best album combinations based on your preferences - within a
-                budget.
-              </p>
-              <p>
-                It uses a scoring system that balances stock, format, price, and
-                genre - offering a smart, curated mix instead of a generic
-                filter.
-              </p>
-              <p>
-                Built for collectors, diggers, and music explorers who want more
-                for less.
-              </p>
+             <h3>What's the <span class="bb-span-colored">Budget Button</span>?</h3>
+<p>
+  <span class="bb-span-colored">BB</span> is a custom feature designed to help you discover
+  the best album combinations based on your preferences — within a budget.
+</p>
+<p>
+  It uses a scoring system that weighs stock, format, price, and genre — offering a smart, personalized mix instead of a generic filter.
+</p>
+<p>
+  Built for collectors, diggers, and music explorers who want more for less.
+</p>
+<p>
+  Want to see how the <span class="bb-span-colored">BB</span> actually works? <a href="https://github.com/DjordjePetrovic014/the-smoke-record-store" target="_blank" class="bb-link">Take a look behind the scenes.</a>
+</p>
+
             </div>
             <div class="about-box about-image">
               <img
