--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
     <!-- Album Detail Modal -->
 <div id="albumModal" class="album-modal hidden">
   <div class="modal-content">
-  <span id="modalClose" class="modal-close">&times;</span>
+  <span id="modalClose" class="modal-close"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 256 256"><path d="M205.66,194.34a8,8,0,0,1-11.32,11.32L128,139.31,61.66,205.66a8,8,0,0,1-11.32-11.32L116.69,128,50.34,61.66A8,8,0,0,1,61.66,50.34L128,116.69l66.34-66.35a8,8,0,0,1,11.32,11.32L139.31,128Z"></path></svg></span>
   <div class="modal-columns">
     <!-- Leva kolona -->
     <div class="modal-left">
